 * Moved page range rendering into 4 phrases, dependent on the pagerange value,
    fixing #2987

2007-12-11 tdb
 * Fixed blister-bar so it correctly hides/shows workflow items controlled with
    STAFF_ONLY, fixing #2985
 * Added optional phrase to Manage Deposits screen "Plugin/Screen/Items:intro"
    that allows some explanatory text to be added, fixing #3000
 * Subjects inputform plugin now uses a field-specific search_bar phrase,
    fixing #3070
 * Don't always show the owner_denied message, fixing #3130
 * Use has_role to determine whether a user is an editor or admin, fixing #2968
 * Added a config option 'max_history_width' to control the width of XML diffs
    on the History screen, fixing #3146
 * Set the character encoding in MIME emails to UTF8, fixing #3150
 * Added 'Save for Later' button to deposit screen, fixing #3071
 * Added a note to Saved searches screen to indicate how to create a Saved
    Search, fixing #2999
 * Strip namespacing from HTML exports (fixes <emph> in citations) under
    LibXML, fixing #3085
 * Strip prefixes from noxmlns to_string output (bug fix for XML::LibXML),
    fixing #3007

2007-12-12 tdb
 * 'x' and 'y' values will now sort correctly (along with ~n, 'e etc.), fixing
    #2944
 * Changed is_dom back to not use ->isa, due to inheritance problems in
    trim_whitespace under LibXML, fixing #3159

2007-12-12 cjg
 * generate_static now compiles the contents of files into auto.css, rather 
    than it just containing @import lines. This improves the load time of 
    page.

2007-12-14 tdb
 * Don't render an Itemref field link inside a link, because it's always going
    to be linked itself, fixing #3189
 * The main repository hostname can now be unqualified (to allow 'localhost'),
    fixing #3184
 * Fixed double-escaping of URLs in document citations, fixing #3113

2007-12-19 tdb
 * Session::render_link shouldn't URI escape (should be HTML escaping, which the
    DOM library will do for us), fixing #3197