@@ -6591,5 +6591,9 @@ PACKAGE: 2.2.99.2
  * Fixed double-escaping of URLs in document citations, fixing #3113
 
 2007-12-19 tdb
- * Session::render_link shouldn't URI escape (should be HTML escaping, which the
-    DOM library will do for us), fixing #3197
+ * Session::render_link shouldn't URI escape (should be HTML escaping, which
+    the DOM library will do for us), fixing #3197
+ * Added methods to parse XML direct from a URL
+ * Added 'pid' configuration to Import::DOI, removed use of wget, fixing #3193
+    and #2854, and part of #2820
+
